--- a/static/stat563/hw_stat563.Rmd
+++ b/static/stat563/hw_stat563.Rmd
@@ -503,7 +503,7 @@ Hence, the function is an upside-down bowl, and the set $\left\{\lambda:\frac{(m
 
 (a) Find the $1-\alpha$ confidence set for $\alpha$ that is obtained by inverting the LRT of $H0:a=a_0$ versus $H1:a\neq a_0$ based on a sample $X_1,..,X_n$ from a $n(\theta,a\theta)$ family, where $\theta$ is unknown.(Exercise 8.8)
 
-$f_X(x)=\frac{1}{\sqrt{2\pi a\theta}}e^{-x^2/2a\theta}$, 
+$f_X(x)=\frac{1}{\sqrt{2\pi a\theta}}e^{-(x-\theta)^2/2a\theta}$, 
 
 $L(a,\theta|x)=\prod_{i=1}^n(2\pi a\theta)^{-1/2}e^{-(x_i-\theta)^2/2a\theta}=(2\pi a\theta)^{-n/2}e^{-\sum_{i=1}^n{(x_i-\theta)^2/2a\theta}}$
 
@@ -529,7 +529,7 @@ $\hat\theta_0=-\frac12a_0+\frac12\sqrt{a_0^2+4\sum_{i=1}^nx_i^2/n}$
 
 The LRT statistic is
 
-$$\Lambda=\frac{(1/a_0\hat\theta_0)^{n/2}e^{-\sum_{i=1}^n(x_i-\hat\theta_0)^2/(2a_0\hat\theta_0)}}{(1/\hat a\hat\theta)^{n/2}e^{-\sum_{i=1}^n(x_i-\hat\theta)^2/(2\hat a\hat\theta)}}=(\frac1{2\pi a_0\hat\theta_0})^{n/2}e^{-\sum_{i=1}^n(x_i-\hat\theta_0)^2/(2a_0\hat\theta_0)}$$
+$$\Lambda=\frac{(1/a_0\hat\theta_0)^{n/2}e^{-\sum_{i=1}^n(x_i-\hat\theta_0)^2/(2a_0\hat\theta_0)}}{(1/\hat a\hat\theta)^{n/2}e^{-\sum_{i=1}^n(x_i-\hat\theta)^2/(2\hat a\hat\theta)}}=(\frac1{2\pi a_0\hat\theta_0})^{n/2}e^{n/2}e^{-\sum_{i=1}^n(x_i-\hat\theta_0)^2/(2a_0\hat\theta_0)}$$
 
 The rejection region of a size $\alpha$ test is $\{x:\lambda(x)\le c_{\alpha}\}$, and a $1-\alpha$ confidence set is $\{a_0:\lambda(x)\ge c_{\alpha}\}$.
 
@@ -537,7 +537,7 @@ The rejection region of a size $\alpha$ test is $\{x:\lambda(x)\le c_{\alpha}\}$
 
 (b) A similar question can be asked about the related family, the $n(\theta,a\theta^2)$ family. If $X_1,..,X_n$ are iid $n(\theta,a\theta^2)$, where $\theta$ is unknown, find the $1-\alpha$ confidence set based on inverting the LRT of $H_0:a=a_0$ versus $H_1:a\neq a_0$.
 
-$f_X(x)=\frac{1}{\sqrt{2\pi a\theta^2}}e^{-x^2/2a\theta^2}$, 
+$f_X(x)=\frac{1}{\sqrt{2\pi a\theta^2}}e^{-(x-\theta)^2/2a\theta^2}$, 
 
 $L(a,\theta|x)=\prod_{i=1}^n(2\pi a\theta^2)^{-1/2}e^{-(x_i-\theta)^2/2a\theta^2}=(2\pi a\theta^2)^{-n/2}e^{-\sum_{i=1}^n{(x_i-\theta)^2/2a\theta^2}}$
 
