--- a/docs/usp570/pm1_usp570.Rmd
+++ b/docs/usp570/pm1_usp570.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Policy Memo"
-subtitle: "Autonomous vehicles and land use"
-date: 'June 11'
+subtitle: "Accessibility measures for regional transportation planning"
+date: 'May 2 - June 11'
 output:
   word_document: null
   pdf_document: default
@@ -22,23 +22,7 @@ From: Shen Qu, Policy Advisor
 
 Date: 5/2/2019 
 
-RE: Autonomous vehicles and land use
-
-
-Choose a metropolitan area. This could be the same one that you use for your case study assignment. Imagine that you have been asked by the MPO to provide advice on how the MPO, as well as the cities within the region, should be planning for autonomous vehicles. Prepare a memo that does the following:
-
-Explains the current and projected status of AVs
-
-Discusses how AVs could influence demand for transportation and, in turn land use. For this analysis, use both theory and research.
-
-Identifies the benefits and costs of these possible outcomes.
-
-Presents policy and planning options for mitigating or otherwise addressing the possible land use effects.
-
-Discusses how the MPO and cities may need alter the tools and analyses they use to consider AVs.
-
-This memo is just one of a series that the MPO is commissioning on this topic. Therefore, your memo should focus on land use (broadly defined, including housing, parking, urban design). Other memos will covers topics related to AVS such as safety and liability.
-
+RE: Define and measure accessibility in Plan Bay Area 2050
 
 # Summary
 
