--- a/static/usp570/pm_usp570.Rmd
+++ b/static/usp570/pm_usp570.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Policy Memo"
-subtitle: "Accessibility measures for regional transportation planning"
-date: 'May 2 - June 11'
+subtitle: "Autonomous vehicles and land use"
+date: 'June 11'
 output:
   word_document: null
   pdf_document: default
@@ -22,7 +22,23 @@ From: Shen Qu, Policy Advisor
 
 Date: 5/2/2019 
 
-RE: Define and measure accessibility in Plan Bay Area 2050
+RE: Autonomous vehicles and land use
+
+
+Choose a metropolitan area. This could be the same one that you use for your case study assignment. Imagine that you have been asked by the MPO to provide advice on how the MPO, as well as the cities within the region, should be planning for autonomous vehicles. Prepare a memo that does the following:
+
+Explains the current and projected status of AVs
+
+Discusses how AVs could influence demand for transportation and, in turn land use. For this analysis, use both theory and research.
+
+Identifies the benefits and costs of these possible outcomes.
+
+Presents policy and planning options for mitigating or otherwise addressing the possible land use effects.
+
+Discusses how the MPO and cities may need alter the tools and analyses they use to consider AVs.
+
+This memo is just one of a series that the MPO is commissioning on this topic. Therefore, your memo should focus on land use (broadly defined, including housing, parking, urban design). Other memos will covers topics related to AVS such as safety and liability.
+
 
 # Summary
 
@@ -36,36 +52,35 @@ Plan Bay Area 2050 is an integrated long-range plan of transportation and land u
 
 Re-examining the prior Plan’s goals and targets is one of the first steps in updating Plan Bay Area in order to make them as meaningful as possible in measuring the Plan’s performance. In the current 13 performance targets [^1], three goals are about 'Equitable Access'[^2]. It is also a response to the most recent federal transportation bills – the Fixing America’s Surface Transportation Act (FAST Act) that require Plan Bay Area to address ‘accessibility and mobility of people and freight’ [@act2015fixing]. 
 
-However, the federal guidelines and the prior plan don't define access explicitly. The terms accessibility and mobility are used as a vague term that does not reflect the ease of reaching various destinations and often are conflated, “misused,” and “abused” in practice [@halden2011use]. Access to destinations does not translate into indicators that reflect accessibility effectively. Although the three targets are components of accessibility, they do not fully reflect access to destinations. In spite of access to affordable housing, a broader range of goals should be included.
+However, the federal guidelines and the prior plan don't define access explicitly. The terms accessibility and mobility are used as a vague term that do not reflect the ease of reaching various destinations and often are conflated, “misused,” or “abused” in practice [@halden2011use]. Although the three targets are components of accessibility, they do not fully reflect access to destinations and translate into indicators effectively. In spite of access to affordable housing, a broader environmental, economic and social goals should be included.
 
-The concept of accessibility has been a common element in the goals and objectives of transport plans [@hansen1959accessibility]. It is one of the most comprehensive performance measures of land use and transportation systems [@boisjoly2017get], which provides residents with greater access to a variety of opportunities, is associated with higher employment rates, greater transit use, and less greenhouse gas emissions [@chen2008role; @owen2015modeling]. It is not only to support and foster economic development through improved employment accessibility for deprived areas, but also to enhance social inclusion and reduce social inequities. 
 
 Explicitly defining and measuring accessibility as the end goal of the transportation network would encourage the establishment of accessibility-based performance indicators to assess the overall benefits of potential investments, and help decision-making for MTC and ABAG.
 
 [^1]: The 13 performance targets are included in six categories: Climate Protection, Healthy and Safe Communities, Open Space and Agricultural Preservation, Equitable Access, Economic Vitality, and Transportation System Effectiveness.
 [^2]: The three goals include: Decrease the share of lower-income residents’ household income consumed by transportation and housing by 10%; Increase the share of affordable housing in PDAs, TPAs, or high-opportunity areas by 15%; Do not increase the share of low- and moderate-income renter households in PDAs, TPAs, or high-opportunity areas that are at risk of displacement.
 
-
 # Definition
 
 Accessibility, defined as the ease of reaching destinations, services, or activities; the distribution, character, or amount of activity around a given place; the choices that the built environment offers to travelers [@preston2007accessibility; @litman2013new; @handy2018enough]. It is largely contingent on the spatial distribution of destinations, influenced by the distribution of residential, economic, cultural and social activities. 
 
-For individual, living in an area with high accessibility to jobs is associated with shorter trips, as is working in an area of high housing accessibility. For firms, high accessibility means that easy access to suppliers, workforce, customers, desirable environment, amenities, friendly government, etc. [@levinson2018metropolitan, p.111]
+The concept of accessibility has been a common element in the goals and objectives of transport plans [@hansen1959accessibility]. It is one of the most comprehensive performance measures of land use and transportation systems [@boisjoly2017get], which provides residents with greater access to a variety of opportunities. For individual, living in an area with high accessibility to jobs is associated with shorter trips, as is working in an area of high housing accessibility. For firms, high accessibility means that easy access to suppliers, workforce, customers, desirable environment, amenities, friendly government, etc. [@levinson2018metropolitan, p.111] Greater access is associated with higher employment rates, greater transit use, and less greenhouse gas emissions [@chen2008role; @owen2015modeling]. It is not only to support and foster economic development through improved employment accessibility for deprived areas, but also to enhance social inclusion and reduce social inequities. 
 
-Accessibility is instrumental in explaining the spatial form and function of metropolitan areas. 
-It is the "fundamental force for the relationship between transport and land use in a city" [@levinson2018metropolitan, p.22] and impacts on city organization, development, and planning to achieve more sustainable outcomes. Moreover, It’s a goal that almost everyone can agree on to assess current conditions and proposed policies [@handy2018enough]. 
+
+Accessibility is an instrumental concept in explaining the spatial form and function of metropolitan areas. 
+It is the "fundamental force for the relationship between transport and land use in a city" [@levinson2018metropolitan, p.22] and impacts on city organization, development, and planning to achieve more sustainable outcomes. Moreover, it’s a goal that almost everyone can agree on to assess current conditions and proposed policies [@handy2018enough]. 
 
 # The accessibility measures
 
-The accessibility measures relate to the spatial distribution of opportunities such as households, jobs, retail stores, healthcare, and other services. The metrics help policymakers to define regional transportation priorities.
+The accessibility measures relate to the spatial distribution of opportunities such as households, jobs, retail stores, healthcare, and other services. The metrics can help policymakers to define regional transportation priorities.
 
- - cumulative-opportunity measures: the availability of opportunities close by
+ - Cumulative-opportunity measures: the availability of opportunities close by
 
-cumulative-opportunity measures typically account for the number of opportunities that can be reached from a specific location using a particular mode within a travel costs threshold [@handy1997measuring]. For example, the number of jobs that are within 45 min of travel times by transit from a specific place (counting exchange opportunities within a defined geographic parameter).
+Cumulative-opportunity measures typically account for the number of opportunities that can be reached from a specific location using a particular mode within a travel costs threshold [@handy1997measuring]. For example, the number of jobs that are within 45 minutes of travel times by transit from a specific place (counting exchange opportunities within a defined geographic parameter).
 
-cumulative-opportunity measures are easy to generate, interpret, and to communicate. Policy-makers most commonly use them as they provide a comprehensive measure of the land use and transport system at the regional level [@dodson2007investigating]. It is thus better suited for planning documents.
+Cumulative-opportunity measures are easy to generate, interpret, and communicate. Policy-makers most commonly use them as they provide a comprehensive measure of the land use and transport system at the regional level [@dodson2007investigating]. It is thus better suited for planning documents.
 
- - gravity-based measure: the ease and worth of travel to destinations far away
+ - Gravity-based measure: the ease and worth of travel to destinations far away
 
 The gravity-based measure discounts opportunities with a distance-decay function based on the travel costs (pitting the importance of given exchange opportunities against travel time impedances). The farther opportunities receive less weight than closer. This measure better reflects travel behavior as it accounts for the travelers’ perceptions of time [@ben1979disaggregate]. 
 
@@ -77,15 +92,10 @@ Integrating both cumulative-opportunity and gravity-based measure, including acc
 
 Local accessibility is primarily determined by nearby activity (approximately one-half to one mile in residential areas). The destinations include grocery stores, schools, hospitals, parks or public transport station. It is a reflection of the available opportunities for jobs and services at the neighborhood levels. 
 
-Local accessibility is often associated with cycling and walking. Distance thresholds are used instead of travel time thresholds (0.5 miles for walking). These appear to be appropriate measures of accessibility, as time is generally proportional to the distance traveled by bicycle or foot. 
+Local accessibility policy initiatives speak more to issues of mixing uses on a parcel or neighborhood scale, site design, and more directly, facilitating circulation patterns that enhance walking, bicycling, and transit use. Local accessibility is often associated with cycling and walking. Distance thresholds are used instead of travel time thresholds (0.5 miles for walking). These appear to be appropriate measures of accessibility, as time is generally proportional to the distance traveled by bicycle or foot. 
 
-Local accessibility policy initiatives speak more to issues of mixing uses on a parcel or neighborhood scale, site design, and more directly, facilitating circulation patterns that enhance walking, bicycling, and transit use.
+How better a new transport infrastructure improvement increases accessibility? Who and where can directly use the facility? Sufficient information about the tradeoffs inherent in different development scenarios can help regions choose projects more objectively. Analyzing future development scenarios in terms of their levels of accessibility could provide better information about the performance and the costs of different transportation-infrastructure and land-use scenarios, and leverage MTC’s influence on municipal-level land-use decisions. 
 
-Analyzing future development scenarios in terms of their levels of accessibility could leverage MTC’s influence on municipal-level land-use decisions. 
-
-The comparisons could help MTC provide better information about the performance and the costs of different transportation-infrastructure and land-use scenarios.
-
-How better a new transport infrastructure improvement increases accessibility? Who and where can directly use the facility? Sufficient information about the tradeoffs inherent in different development scenarios can help regions choose projects more objectively. 
 
 # Equity analysis
 
@@ -98,20 +108,20 @@ It is necessary to segment the accessibility analysis by socio-economic groups s
 
 Measures of generalized costs (including financial and time costs) better reflect the total costs of travel as they include both financial and time burdens. These measures can also provide insight on fare structures and trip affordability, address the financial constraints that vulnerable individuals may face.
 
-Increasing accessibility by transit, cycling and walking can contribute to achieving broader environmental, economic and social goals. Such as the percentage of people or jobs that are within 0.5 miles of a public transport station. 
-
 Time restrictions also play an important role in determining accessibility, which include land use, transport and individual constraints such as (opening hours, schedule of services, job starting time, etc.)
 
 
 # More options 
 
 More efforts are needed to implement accessibility-based approaches effectively. The utility-based measures capture the economic benefits provided by changes in the network. Utility-based measures account for most components of accessibility and can be included in traditional cost-benefit analysis [@van2016accessible]. 
+
 Other dimensions of accessibility such as affordability, transfer and digital connectivity [@lyons2016guidance] should not be neglected in metropolitan transportation plans and should come up as the aspects of accessibility objectives.
+
 Accessibility maps and metrics provide an overview of the land use and transportation network, are useful tools to communication gaps and thus helps decision-makers, planners and the general population to better grasp the impacts of transportation investments. 
 
 # Conclusion
 
-Plan Bay Area 2050 sets a roadmap for future transportation investments and will identify what it would take to accommodate expected growth.
+Plan Bay Area 2050 will set a roadmap for future transportation investments and will identify what it would take to accommodate expected growth.
 Accessibility, the ease of reaching destinations, allows capturing the complex interactions between land use and transportation systems while providing a social perspective on transportation planning. 
 
 Setting clear accessibility requirements for transportation planning processes and planning documents could provide greater transparency and foster the inclusion of accessibility aspect in the decision-making process. Integrating Plan Bay area 2050 goals with accessibility-focused performance measures could help MTC, ABAG, and local governments make better decisions about the selection and prioritization of transportation infrastructure [@boisjoly2017insider].
