--- a/static/usp570/rr_usp570.Rmd
+++ b/static/usp570/rr_usp570.Rmd
@@ -4,8 +4,8 @@ subtitle: "USP 570"
 author: 'Shen Qu'
 date: "Week 6"
 output:
-  word_document: null
   pdf_document: default
+  word_document: null
 bibliography: bib_usp570.bib
 mainfont: Times New Roman
 geometry: margin=1in
@@ -23,13 +23,22 @@ options(repos="https://cran.rstudio.com")
 ```
 
 
- - Evaluation
+ - 'Diamond of Evaluation'
  
-@levinson2018metropolitan [Chapter.5] 
+@levinson2018metropolitan [Chapter.10] introduced five criteria for evaluating transportation and land use planning, which are called the Diamond of Evaluation comprising the five "Es." Efficiency and equity are classic perspective of analysis. Environmental impacts is also a widely accepted perspective. The measures of experience involves some comprehensive factors. The final criterion, expdiency, is more like a mechanism for decision-making and weighing the options. The five points of view reflcet the complexcity of urban transportation and land use system, and then result differing claims or proposed solutions. The author also mentioned another evaluation pradiams, which including four types of architechtures (functional, physical, techincal, and dynamic operational) and four attibutes (robustness, adaptability, flexibility, and schalability).
 
- - Replace with VMT
 
-In Chapter.6, @levinson2018metropolitan 
+
+
+ - Replacing LOS with VMT
+
+The Senate Bill 743 in California is a meaningful change of environmental impact assessment. It replaced previous measure of auto congestion, level of service (LOS), with vehicle miles traveled (VMT). From the perspective of efficiency, policy-makers and public realized relying on LOS is not the solution but reinforces the traffic problems. Road supplyment will never catch up the growing of demand, enforce the auto dependency, and "trap cities in an endless cycle of road-widening projects." The evaluation of efficientcy also should focus on people's needs and activities, consider the regional effects, long-term goals of transportation and land use as a whole, not limit in road network itself. The VMT metric relies on fewer assumptions and is cheaper. Moreover, VMT can better reflect the outcomes in regional scale, can capture a variety of widely recognized negative social, environmental, and land-use impacts.
+
+ - Disscution: Diamond or Onion?
+ 
+Thinking of the relationship between the five 'Es', I find an oninon structure may better discribe the relationship among them. The five 'Es' don't play equal roles. Efficiency is the the primary power of running, the core value of evaluation. Other outlayers such as equtiy, evirnonment, and expediency are adjustment tools to make the evaluation more complete. We know a single perspective of efficiency is imperfect. However, a single perspective of environment or expediecy doesn't work. In the process of decision-making, efficiency is the step one. We firstly need prove the benefits and then consider the options for improving equity and other issues. If puting equity or envrionment on the central place and treating efficiency as an ancillary position, the whole system will slow down even break up. In the case of SB 743 in California, GHG emissions reduction, human health and economic growth are the primary reason, which all belone the generalized range of efficiency. Less VMT responses the modal equity but doesn't help other equity issue like "the last ones in are the ones who pay." 
+
+It is necessary to clarify that using the partial or short-term efficeincy to evalue a project is a misunderstand. The case of SB 743 shows that we realize the traffic efficiency doesn't represent the social efficiency and even hurt the overall and long-term efficiency. This is the primary reason of change. Coming back to the five attributes of good measures of effectiveness, VMT is clear, calculable, and comparable. But it is more like a indicator that less is better. It can't tell us the whole gain and loss. The utility by economists is still the best measure for the transport–land use system. Some economic concepts and methods, such as the value of a statistical life (VSL) and the cost of climate change, try to integrate the different perspectives, and provide an uniform metric as wide as possible. Expediency is that VMT is the best criteria among the feasible tools in determining the transportation impacts of projects in local level.
 
 
 References {#references .unnumbered}
